support for SecurityManager